tests/rune_literal_range_i16_bad.sl
// Verifies rune literal range i16 is rejected.
fn main() {
	var x i16 = '\U00010000'
}
